fix fonts and spacing on prof exp page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -165,25 +165,29 @@ body {
 .content {
 	display: flex;
 	flex-direction: column;
-	margin-bottom: var(--space-large);
-	gap: var(--space-large);
-	margin-top: var(--space-large);
+	gap: var(--space-medium);
+	margin-top: var(--space-small);
 }
 
 /* Hero */
-.hero__title {
+.page__title {
 	font-weight: 900;
 	font-size: var(--font-size-x-large);
 	/* margin-bottom: var(--space-x-large); */
 }
 
-.hero__text_container {
+.page__subtitle {
+	font-size: var(--font-size-large);
+	font-weight: 500;
+}
+
+.page__text_container {
 	display: flex;
 	flex-direction: column;
 	gap: var(--space-medium);
 }
 
-.hero__text {
+.page__text {
 	font-size: var(--font-size-small);
 	/* font-weight: 500; */
 	line-height: 1.5em;
